<resources>
    <string name="app_name">sybmarketplace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_content_description">logo</string>
    <string name="marketplace_text">Marketplace</string>
    <string name="sell_text">Vender</string>
    <string name="for_you_text">Para ti</string>
    <string name="categories_text">Categorías</string>
    <string name="search_hint">Buscar</string>
    <string name="create_account_text">Crea tu cuenta</string>
    <string name="greeting_create_account_text">Bienvenido/a al Marketplace #1 de EL Salvador. \nComplete las credenciales para crear su cuenta.</string>
    <string name="name_hint">Nombre</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="party_content_description">confeti icono</string>
    <string name="password_hint">Contraseña</string>
    <string name="confirm_password_hint">Confirmar contraseña</string>
    <string name="terms_and_conditions_text">Haz click en el botón Registrarme, usted \naceptará los términos y condiciones.</string>
    <string name="register_me_text">Registrarme</string>
    <string name="login_or_text">-o inicia sesión con-</string>
    <string name="have_account_text">Ya tienes cuenta?</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="greeting_login">Bienvenido/a de nuevo a su Marketplace preferido. \nComplete las credenciales para inicar sesión..</string>
    <string name="forgot_password">Olvidaste contraseña?</string>
    <string name="reset_password_text">Restablecer la contraseña</string>
    <string name="greeting_text_reset_password">Escribe la dirección de correo electrónico asociada \na tu cuenta y crea tu nueva contraseña para \nconfirmar el cambio realizado.</string>
    <string name="arrow_back_content_description">hacia atrás</string>
    <string name="image_product_content_description">Imagen del producto</string>
    <string name="whatsapp_text">Whatsapp</string>
    <string name="code_hint">Codigo de verificación</string>
    <string name="products_text">Productos</string>
    <string name="settings_text">Configuraciones</string>
    <string name="saves_text">Guardado</string>
    <string name="change_password_text">Cambiar contraseña</string>
    <string name="language_text">Idioma</string>
    <string name="log_out_text">Cerrar sesión</string>
    <string name="title_text">Título</string>
    <string name="title_hint">Detalla el título del producto</string>
    <string name="description_text">Descripción</string>
    <string name="category_text">Categoría</string>
    <string name="description_hint">Descripción del producto con más detalle</string>
    <string name="State_text">Número de teléfono para contacto</string>
    <string name="state_hint">Seleccionar estado</string>
    <string name="price_text">Precio</string>
    <string name="price_hint">Ingresa el precio del producto</string>
    <string name="add_image_text">Añadir imagen principal</string>
    <string name="post_text">Publicar</string>
    <string name="add_more_text">añadir más</string>
    <string name="not_have_account_text">No tienes una cuenta?</string>
    <string name="error_empty_text">Campo vacío</string>
    <string name="dollar_sign">$</string>
    <string name="phonenumber_hint_text">Ingresar numero telefonico</string>
    <string name="phonenumber_text_view">Numero de contacto</string>
    <string name="send_code_text">Ingresa tú correo electrónico donde te enviaremos un código con el cual podrás establecer una nueva contraseña</string>
    <string name="admin_text_view">Administrador</string>
    <string name="delete_text">Eliminar</string>
    <string name="greeting_admin_text">Bienvenido, Admin</string>
    <string name="profile_text">Perfil</string>
    <string name="start_greeting_text">Descubre los mejores productos</string>
    <string name="start_text">comenzar</string>
</resources>