<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewmodel"
            type="com.mcmp2023.s.ui.account.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_header_selector">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/medium_gap"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/iniciarsesionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/logoImageView"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

        <ImageView
            android:id="@+id/action_backtologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/party_content_description"
            android:src="@drawable/party_icon"
            app:layout_constraintBottom_toTopOf="@+id/iniciarsesionTextView"
            app:layout_constraintStart_toEndOf="@+id/logoImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/small_gap"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/greeting_login"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iniciarsesionTextView" />

        <EditText
            android:id="@+id/TextFieldLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:background="@drawable/et_style"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="4dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="56dp"
            android:padding="10dp"
            android:text="@={viewmodel.email}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <LinearLayout
            android:id="@+id/password_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:background="@drawable/et_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextFieldLoginEmail">

            <EditText
                android:id="@+id/TextFieldLoginPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.80"
                android:background="@color/transparent"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="4dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:minHeight="56dp"
                android:padding="10dp"
                android:text="@={viewmodel.password}"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                 />

            <ImageView
                android:id="@+id/show_password_image_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginEnd="@dimen/small_gap"
                android:layout_gravity="center"
                android:src="@drawable/eye_closed_icon"/>

        </LinearLayout>


        <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field_layout" />

        <Button
            android:id="@+id/action_login_btn"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#FF018786"
            android:fontFamily="@font/roboto_bold"
            android:onClick="@{() -> viewmodel.onLogin()}"
            android:text="@string/login_text"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field_layout" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_or_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_login_btn" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="19dp"
            android:text="@string/not_have_account_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/action_register_text_view"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/action_register_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/register_me_text"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
