<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForYouFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_for_you_view"
                android:layout_width="46dp"
                android:layout_height="26dp"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/logo_content_description"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/marketplace_text"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="@+id/icon_for_you_view"
                app:layout_constraintTop_toBottomOf="@+id/icon_for_you_view" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/medium_gap"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/sell_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sell_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/sell_text_view"
                app:layout_constraintStart_toEndOf="@+id/sell_text_view"
                app:layout_constraintTop_toTopOf="@+id/sell_text_view" />

            <TextView
                android:id="@+id/for_you_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/for_you_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/category_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/categories_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/for_you_text_view"
                app:layout_constraintStart_toEndOf="@+id/for_you_text_view"
                app:layout_constraintTop_toTopOf="@+id/for_you_text_view" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:background="@drawable/search_style"
                android:drawableEnd="@drawable/search_icon"
                android:hint="@string/search_hint"
                android:minHeight="48dp"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sell_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>