<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.mcmp2023.s.ui.account.forgotPassword.viewmodel.ForgotPasswordViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_header_selector">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:contentDescription="@string/arrow_back_content_description"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/send_code_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/email_forgot_edittext"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:background="@drawable/et_style"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="4dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email_hint"
            android:inputType="text"
            android:minHeight="56dp"
            android:padding="10dp"
            android:text="@={viewmodel.email}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/action_sendcode"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:backgroundTint="#FF018786"
            android:fontFamily="@font/roboto_bold"
            android:onClick="@{() -> viewmodel.onForgotPassword()}"
            android:text="Enviar codigo"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_forgot_edittext" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
