<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.for_you.product.descriptionproduct.ProductDescriptionFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:paddingBottom="@dimen/medium_gap">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:layout_marginBottom="225dp"
            android:contentDescription="@string/image_product_content_description"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:layout_margin="@dimen/default_gap"
            android:id="@+id/arrowBackIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|start"
            android:contentDescription="@string/arrow_back_content_description"
            android:src="@drawable/arrow_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/primary"
            android:background="@drawable/rounded_top_corners_layout_style"
            android:orientation="vertical"
            android:paddingTop="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_top_corners_layout_style"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_gap">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_marginStart="@dimen/small_gap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="Reloj Rolex" />

                    <TextView
                        android:layout_marginStart="@dimen/small_gap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="Por: Ricardo pocasangre" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_gap">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="end"
                        android:layout_margin="@dimen/small_gap"
                        android:src="@drawable/bookmark" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingExtra="3dp"
                android:padding="16dp"
                android:text="Reloj icónico por excelencia, el Oyster Perpetual Cosmograph Daytona se ha consolidado mucho más allá de los circuitos automovilísticos por su estética emblemática y su desempeño superlativo.
Con ocasión de los 60 años del modelo."
                android:textColor="@color/white"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.60"
                    android:orientation="vertical"
                    android:padding="@dimen/small_gap">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_marginStart="@dimen/small_gap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/white"
                        tools:text="Precio" />

                    <TextView
                        android:layout_marginStart="@dimen/small_gap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:text="$129.99" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_gap">

                    <Button
                        android:layout_marginEnd="@dimen/default_gap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/secondary"
                        android:minHeight="60dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/whatsapp_text"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

</layout>